--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind CSS</title>
     <link href="./build/tailwind.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body class="w-full overflow-auto">
     <header
@@ -66,9 +67,74 @@
         </h2>
       </div>
     </div>
-    <div></div>
+    <div class="bg-gray-900 w-full flex-col align-middle justify-center">
+      <div class="p-8 w-full">
+        <input
+          class="rounded w-11/12 md:w-6/12 justify-center p-2 ml-auto mr-auto block"
+          placeholder="Search Movie By Name"
+          id="search-input"
+          oninput="searchMovies()"
+        />
+      </div>
+
+      <div
+        id="movies-container"
+        class="p-8 w-full flex flex-row flex-wrap justify-center"
+      ></div>
+    </div>
+
+    <div class="w-full bg-white">
+      <div class="mb-12">
+        <h1 class="text-black text-5xl font-bold text-center mt-12">
+          Cinema Facilities
+        </h1>
+        <div class="w-8 h-8 m-auto mt-12">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="black"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z"
+            />
+          </svg>
+        </div>
+      </div>
+      <div
+        class="flex-col md:flex md:flex-row justify-center md:justify-evenly"
+      >
+        <div class="flex-col">
+          <img
+            src="./assets/images/tv.jpg"
+            width="200"
+            height="200"
+            class="m-auto"
+          />
+          <div class="font-bold text-2xl p-8 uppercase">Great Environment</div>
+        </div>
+        <div class="flex-col justify-center">
+          <img src="./assets/images/3dglass.jpg" width="200" height="200" />
+          <div class="font-bold text-2xl p-8 uppercase">Real 3D</div>
+        </div>
+        <div class="flex-col">
+          <img
+            src="./assets/images/glass.png"
+            width="200"
+            height="200"
+            class="m-auto"
+          />
+          <div class="font-bold text-2xl p-8 uppercase">
+            Entertainment Center
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="bg-gray-900 w-full p-10">
-      <div class="w-full sm:flex-col md:flex md:flex-row">
+      <div class="w-full sm:flex-col md:flex md:flex-row md:justify-center">
         <div class="flex flex-col w-full h-full md:w-3/12">
           <h1 class="border-b-5 text-white text-lg border-b-2 border-white-500">
             ABOUT
@@ -107,34 +173,67 @@
         </div>
         <div class="w-full md:w-3/12 md:ml-16">
           <h1 class="border-b-5 text-white text-lg border-b-2 border-white-500">
-            GALLERY
-          </h1>
-          <div class="grid grid-flow-col auto-cols-max md:auto-cols-min">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
-        </div>
-        <div class="w-full md:w-3/12 md:ml-16">
-          <h1 class="border-b-5 text-white text-lg border-b-2 border-white-500">
             CONTACT US
           </h1>
-          <div class="grid grid-flow-col auto-cols-max md:auto-cols-min">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+          <div class="flex flex-row mt-5">
+            <div class="w-8 h-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="white"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 3l-6 6m0 0V4m0 5h5M5 3a2 2 0 00-2 2v1c0 8.284 6.716 15 15 15h1a2 2 0 002-2v-3.28a1 1 0 00-.684-.948l-4.493-1.498a1 1 0 00-1.21.502l-1.13 2.257a11.042 11.042 0 01-5.516-5.517l2.257-1.128a1 1 0 00.502-1.21L9.228 3.683A1 1 0 008.279 3H5z"
+                />
+              </svg>
+            </div>
+            <span class="text-white ml-2">0598785475</span>
+          </div>
+          <div class="flex flex-row">
+            <div class="w-8 h-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="white"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                />
+              </svg>
+            </div>
+            <span class="text-white ml-2">info@talent.com</span>
+          </div>
+          <div class="flex flex-row">
+            <div class="w-8 h-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="white"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </div>
+            <span class="text-white ml-2">los angeles , USA</span>
           </div>
         </div>
       </div>
-      <div class="text-white font-semibold mt-6 w-full">
+      <div class="text-white font-semibold mt-6 w-full text-center">
         Copyright 2021 Talent Program
       </div>
     </footer>
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-      crossorigin="anonymous"
-    ></script>
+    <script src="./scripts/searchMovies.js" type="text/javascript"></script>
+    <script src="./scripts/loadMovies.js" type="text/javascript"></script>
   </body>
 </html>
