--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="w-full overflow-auto">
     <header
-      class="bg-gray-800 flex-col md:flex md:flex-row justify-around p-4 flex-wrap h-25 md:h-20 w-full"
+      class="bg-gray-800 flex-col md:flex md:flex-row justify-around p-4 flex-wrap h-25 md:h-20 w-full fixed z-10 shadow-2xl"
     >
       <div class="flex items-center">
         <div class="w-8 h-8">
@@ -50,24 +50,39 @@
         </div>
       </div>
     </header>
-    <div class="flex flex-col-reverse md:flex-row justify-around w-full">
-      <img src="./assets/images/cinema-seat.jpg" alt="cinema seat" />
-      <div>
-        <h1
-          class="text-5xl font-semibold uppercase p-5 font-sans text-right text-red-600"
-        >
-          Watch Latest Movies
-          <br />
-          Online
-        </h1>
-        <h2
-          class="text-3xl font-semibold p-5 font-sans capitalize text-red-600 max-w-md text-left md:text-justify"
-        >
-          Now You can watch your favourite movies whenever you want
-        </h2>
+    <section
+      class="flex flex-col-reverse md:flex-row justify-around w-full bg-gray-800 pt-36"
+    >
+      <img
+        src="./assets/images/theater.png"
+        alt="cinema seat"
+        width="50%"
+        height="100%"
+      />
+      <div class="m-auto">
+        <div class="flex flex-row align-middle">
+          <div>
+            <span class="text-6xl md:text-8xl text-red-500">3</span
+            ><span class="text-6xl md:text-8xl text-yellow-300">D</span>
+
+            <div class="text-5xl md:text-7xl text-red-500 uppercase">
+              Cinema
+            </div>
+          </div>
+
+          <img
+            src="./assets/images/popcorn.png"
+            width="150"
+            height="150"
+            class="animate-bounce"
+          />
+        </div>
       </div>
-    </div>
-    <div class="bg-gray-900 w-full flex-col align-middle justify-center">
+    </section>
+    <section class="bg-gray-800 w-full text-center p-8">
+      <h1 class="text-7xl text-red-600">Let's Explore Movies together</h1>
+    </section>
+    <section class="bg-gray-800 w-full flex-col align-middle justify-center">
       <div class="p-8 w-full">
         <input
           class="rounded w-11/12 md:w-6/12 justify-center p-2 ml-auto mr-auto block"
@@ -81,9 +96,9 @@
         id="movies-container"
         class="p-8 w-full flex flex-row flex-wrap justify-center"
       ></div>
-    </div>
+    </section>
 
-    <div class="w-full bg-white">
+    <section class="w-full bg-white">
       <div class="mb-12">
         <h1 class="text-black text-5xl font-bold text-center mt-12">
           Cinema Facilities
@@ -114,11 +129,20 @@
             height="200"
             class="m-auto"
           />
-          <div class="font-bold text-2xl p-8 uppercase">Great Environment</div>
+          <div class="font-bold text-2xl p-8 uppercase text-center">
+            Great Environment
+          </div>
         </div>
-        <div class="flex-col justify-center">
-          <img src="./assets/images/3dglass.jpg" width="200" height="200" />
-          <div class="font-bold text-2xl p-8 uppercase">Real 3D</div>
+        <div class="flex-col">
+          <img
+            src="./assets/images/3dglass.jpg"
+            width="200"
+            height="200"
+            class="m-auto"
+          />
+          <div class="font-bold text-2xl p-8 uppercase text-center">
+            Real 3D
+          </div>
         </div>
         <div class="flex-col">
           <img
@@ -127,12 +151,12 @@
             height="200"
             class="m-auto"
           />
-          <div class="font-bold text-2xl p-8 uppercase">
+          <div class="font-bold text-2xl p-8 uppercase text-center">
             Entertainment Center
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <footer class="bg-gray-900 w-full p-10">
       <div class="w-full sm:flex-col md:flex md:flex-row md:justify-center">
         <div class="flex flex-col w-full h-full md:w-3/12">
@@ -235,5 +259,6 @@
     </footer>
     <script src="./scripts/searchMovies.js" type="text/javascript"></script>
     <script src="./scripts/loadMovies.js" type="text/javascript"></script>
+    <script src="./scripts/handleErrors.js" type="text/javascript"></script>
   </body>
 </html>
