--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind CSS</title>
     <link href="./build/tailwind.css" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body class="w-full overflow-auto">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <header
       class="bg-gray-800 flex-col md:flex md:flex-row justify-around p-4 flex-wrap h-25 md:h-20 w-full fixed z-10 shadow-2xl"
     >
@@ -58,6 +58,7 @@
         alt="cinema seat"
         width="50%"
         height="100%"
+        class="w-full md:w-6/12"
       />
       <div class="m-auto">
         <div class="flex flex-row align-middle">
@@ -65,7 +66,11 @@
             <span class="text-6xl md:text-8xl text-red-500">3</span
             ><span class="text-6xl md:text-8xl text-yellow-300">D</span>
 
-            <div class="text-5xl md:text-7xl text-red-500 uppercase">
+            <div
+              class="text-5xl md:text-7xl text-red-500 uppercase"
+              data-reveal-self
+              data-scrolled-into-view="false"
+            >
               Cinema
             </div>
           </div>
@@ -79,8 +84,8 @@
         </div>
       </div>
     </section>
-    <section class="bg-gray-800 w-full text-center p-8">
-      <h1 class="text-7xl text-red-600">Let's Explore Movies together</h1>
+    <section class="bg-gray-800 w-full text-center p-8 hidden md:inline-block">
+      <h1 class="text-7xl text-white">Let's Explore Movies together!</h1>
     </section>
     <section class="bg-gray-800 w-full flex-col align-middle justify-center">
       <div class="p-8 w-full">
@@ -122,7 +127,9 @@
       <div
         class="flex-col md:flex md:flex-row justify-center md:justify-evenly"
       >
-        <div class="flex-col">
+        <div
+          class="flex-col cursor-pointer transition transform hover:translate-y-5 animated-element"
+        >
           <img
             src="./assets/images/tv.jpg"
             width="200"
@@ -133,7 +140,9 @@
             Great Environment
           </div>
         </div>
-        <div class="flex-col">
+        <div
+          class="flex-col cursor-pointer transition transform hover:translate-y-5 animated-element"
+        >
           <img
             src="./assets/images/3dglass.jpg"
             width="200"
@@ -144,7 +153,9 @@
             Real 3D
           </div>
         </div>
-        <div class="flex-col">
+        <div
+          class="flex-col cursor-pointer transition transform hover:translate-y-5 animated-element"
+        >
           <img
             src="./assets/images/glass.png"
             width="200"
@@ -160,28 +171,30 @@
     <footer class="bg-gray-900 w-full p-10">
       <div class="w-full sm:flex-col md:flex md:flex-row md:justify-center">
         <div class="flex flex-col w-full h-full md:w-3/12">
-          <h1 class="border-b-5 text-white text-lg border-b-2 border-white-500">
-            ABOUT
-          </h1>
-          <div class="w-10 h-10">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="#df3b46"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z"
-              />
-            </svg>
+          <div class="flex flex-row">
+            <div class="w-7 h-7">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="#df3b46"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z"
+                />
+              </svg>
+            </div>
+            <h1 class="text-white text-lg border-white-500 border-b-5 ml-2">
+              ABOUT
+            </h1>
           </div>
-          <p class="text-white text-justify">
+          <p class="text-white text-justify mt-4">
             great variety of films are shown at cinemas, ranging from animated
             films to blockbusters to documentaries. The smallest movie theaters
-            have a single viewing room with a single screen. In the 2010s
+            have a single viewing room with a single screen.
           </p>
         </div>
         <div class="w-full md:w-3/12 md:ml-16">
@@ -189,14 +202,16 @@
             Categories
           </h1>
           <ul class="p-4">
-            <li class="text-white list-disc">Action Movies</li>
-            <li class="text-white list-disc">Adventure Movies</li>
-            <li class="text-white list-disc">Animation Movies</li>
-            <li class="text-white list-disc">Crime Movies</li>
+            <li class="text-white list-disc mb-2">Action Movies</li>
+            <li class="text-white list-disc mb-2">Adventure Movies</li>
+            <li class="text-white list-disc mb-2">Animation Movies</li>
+            <li class="text-white list-disc mb-2">Crime Movies</li>
           </ul>
         </div>
         <div class="w-full md:w-3/12 md:ml-16">
-          <h1 class="border-b-5 text-white text-lg border-b-2 border-white-500">
+          <h1
+            class="border-b-5 text-white text-lg border-b-2 border-white-500 cursor-pointer"
+          >
             CONTACT US
           </h1>
           <div class="flex flex-row mt-5">
@@ -217,7 +232,7 @@
             </div>
             <span class="text-white ml-2">0598785475</span>
           </div>
-          <div class="flex flex-row">
+          <div class="flex flex-row mt-8">
             <div class="w-8 h-8">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -235,7 +250,7 @@
             </div>
             <span class="text-white ml-2">info@talent.com</span>
           </div>
-          <div class="flex flex-row">
+          <div class="flex flex-row mt-8">
             <div class="w-8 h-8">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -260,5 +275,6 @@
     <script src="./scripts/searchMovies.js" type="text/javascript"></script>
     <script src="./scripts/loadMovies.js" type="text/javascript"></script>
     <script src="./scripts/handleErrors.js" type="text/javascript"></script>
+    <script src="./scripts/animation.js"></script>
   </body>
 </html>
