add browser icon

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind CSS</title>
     <link href="./build/tailwind.css" rel="stylesheet" />
+    <link rel="icon" href="./assets/images/cinema-seat.jpg" />
   </head>
   <body class="w-full overflow-auto">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
